--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 <div class="navigation">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="{% url "home:home" %}">
                         <span class="fa fa-home"></span>
                         <span>Home</span>
                     </a>
@@ -102,10 +102,12 @@
                     </li>
                     <li class="divider">|</li>
                     <li>
-                        <a href="#">Sign Up</a>
+                        <a href="{% url "user:registration" %}">Sign Up</a>
                     </li>
                 </ul>
+                <a href="{% url "user:login" %}">
                 <button type="button">Log In</button>
+                </a>
             </div>
         </div>
 
