--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,9 @@
                     </li>
                     <li class="divider">|</li>
                     <li>
-                        <a href="{% url "user:registration" %}">Sign Up</a>
+                        <a href="{% url "user:registration" %}">
+                        <button type="submit"> Sign Up</button>
+                        </a>
                     </li>
                 </ul>
                 <a href="{% url "user:login" %}">
