--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,110 +1,140 @@
+html,
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: 'Century Gothic', 'URW Gothic', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background: #041A08;
-    background-size: cover;
+  margin: 0;
+  padding: 0;
+  font-family: Circular, Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: #222326;
+  font-weight: 400;
 }
-.main{
-    width: 500px;
-    height: 600px;
-    overflow: hidden;
-    background:#143b1a;
-    background-size: cover;
-    border-radius: 10px;
-    box-shadow: 5px 20px 50px #000;
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: Circular, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
-#chk{
-    display: none;
+
+.signup_header {
+  height: 10vw;
+  min-height: 60px;
+  max-height: 108px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  border-bottom: 1px solid #d9dadc;
 }
-.singup{
-    position: relative;
-    height: 100%;
-    width: 100%;
+
+.signup_header img {
+  /* height: 80%;
+  max-height: 60px;
+  min-height: 40px; */
+  height: 80%;
+  max-width: 200px;
+  min-height: 40px;
+  transform: translateX(-8px);
 }
-label{
-    color: #fff;
-    font-size: 2.3em;
-    justify-content: center;
-    display: flex;
-    margin: 50px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+
+.signup_body,
+.login_form {
+  background: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
 }
-input{
-    width: 300px;
-    height: 20px;
-    background: #E0DEDE;
-    justify-content: center;
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
+
+.login_form {
+  margin: 0 auto;
+  max-width: 450px;
+  width:90%;
+  /* min-width: 450px; */
 }
-input:invalid{
-    animation: shake 300ms;
+
+.label {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-weight: 700;
 }
-@keyframes shake {
-    25% { transform: translateX(4px); }
-    50% { transform: translateX(-4px); }
-    75% { transform: translateX(4px); }
+
+input {
+    font-family: inherit;
+  display: block;
+  font-size: 16px;
+  line-height: 1;
+  color: #222326;
+  height: 40px;
+  padding: 0 12px;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #d9dadc;
+  border-radius: 0;
+  margin-bottom: 20px;
 }
-.button{
-    width: 250px;
-    height: 40px;
-    margin: 10px auto;
-    justify-content: center;
-    display: block;
-    color: #fff;
-    background: #23683A;
-    font-size: 1em;
-    font-weight: bold;
+
+input:focus {
+  border-color: #919496;
+  transition: border-color 0.15s ease-in-out;
+}
+
+.btn {
+  font-size: 14px;
+  line-height: 1;
+  text-transform: uppercase;
+  font-family:inherit;
+  letter-spacing: 2px;
+  font-weight: 700;
+  border: 0px;
+  display: block;
+  padding: 16px 14px 18px;
+  outline: none;
+  border-radius: 30px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transition: 0.25s;
+}
+
+.btn_log_in {
+  background: #15883e;
+  color: white;
+  border: 2px solid #15883e;
+}
+.btn_log_in:hover {
+  background: #1db954;
+  border: 2px solid #1db954;
+}
+
+.btn_sign_up {
+  text-align: center;
+  background: white;
+  color: #616467;
+  border: 2px solid #616467;
+  text-decoration: none;
+}
+
+.btn_sign_up:hover {
+  background: #616467;
+  color: white;
+}
+
+.center-align {
+  text-align: center;
+}
+
+.divider {
+    height: 1px;
     margin-top: 20px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+    margin-bottom: 30px;
+    background: #d9dadc;
 }
-.button:hover{
-    background: #0B2210;
-}
-.login{
-    height: 460px;
-    background: #eee;
-    border-radius: 60% / 10%;
-    transform: translateY(-280px);
-    transition: .8s ease-in-out;
-}
-.login label{
-    color: #010703;
-    transform: scale(.6);
-}
-#chk:checked ~ .login{
-    transform: translateY(-600px);
-}
-#chk:checked ~ .login label{
-    transform: scale(1);
-}
-#chk:checked ~ .singup label{
-    transform: scale(.6);
-}
-.brand img{
-    width: 44px;
-    padding: 0 8px;
-}
-.brand{
-    display: flex;
-    align-items: center;
-}
-a{
-    text-decoration: none;
-    color: #fff;
+
+
+.signup-title {
+    font-size: 28px;
+    margin-bottom: 30px;
 }
