--- a/templates/home/about_us.html
+++ b/templates/home/about_us.html
@@ -1,102 +1,155 @@
-<section><h2 class="Type__TypeElement-goli3j-0 hqzNBe">Spotify HQ</h2>
-    <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong class="Type__TypeElement-goli3j-0 dnxIgx">Spotify
-        AB</strong><br><span class="Type__TypeElement-goli3j-0 hTccvd">Regeringsgatan 19</span><br><span
-            class="Type__TypeElement-goli3j-0 hTccvd">SE-111 53 Stockholm</span><br><span
-            class="Type__TypeElement-goli3j-0 hTccvd">Sweden</span><br><span
-            class="Type__TypeElement-goli3j-0 hTccvd">Reg no: 556703-7485</span><br>office@spotify.com
-    </address>
-    <h2 class="Type__TypeElement-goli3j-0 hqzNBe">Spotify around the world</h2>
-    <div class="WhereSpotify__FlexWrapper-sc-myca1w-0 dUIzIs">
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Belgium</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Square de Meeus 37</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">4th floor</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">1000 Brussels</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Belgium</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify GmbH</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Unter den Linden 10</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">10117 Berlin</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Germany</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Canada Inc.</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">220 Adelaide Street West</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">M5H 1W7 Toronto Ontario</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Canada</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Denmark ApS</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Vestergade 27, 1 th</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">1456 København K</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Denmark</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">SPOTIFY SPAIN SL</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Paseo de Recoletos, 7-9</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">28004 Madrid</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Spain</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Finland Oy</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Merimiehenkatu 36 D</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">FI-00150 Helsinki</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Finland</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify France SAS</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">48 Rue la Bruyère</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">75009</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Paris</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">France</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify India LLP</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Regus, North F/A-4,</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Floor 1st,A Block,</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Shivsagar Estate, Dr Annie Besant Road,</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Worli, Mumbai Mumbai City,</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">MH 400018 INDIA</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Italy S.r.l.</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Via Joe Colombo 4</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">20124 Milano</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Italy</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Netherlands</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Singel 540 3h</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">1017AZ, Amsterdam</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Netherlands</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Ltd</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Adelphi Building</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">4 Savoy Place</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">London WC2N 6AT</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">United Kingdom</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify USA Inc</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">4 World Trade Center</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">150 Greenwich Street, 62nd Floor</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">New York, NY 10007</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">USA</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Mexico</strong><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Pedregal 24 Torre Virreyes Piso 8</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Col. Molino del Rey</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">DF 11040</span><br><span
-                class="Type__TypeElement-goli3j-0 hTccvd">Mexico</span><br>office@spotify.com
-        </address>
-        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong
-                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Israel</strong><br>office@spotify.com
-        </address>
-    </div>
-</section>
+<!--<section><h2 class="Type__TypeElement-goli3j-0 hqzNBe">Spotify HQ</h2>-->
+<!--    <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong class="Type__TypeElement-goli3j-0 dnxIgx">Spotify-->
+<!--        AB</strong><br><span class="Type__TypeElement-goli3j-0 hTccvd">Regeringsgatan 19</span><br><span-->
+<!--            class="Type__TypeElement-goli3j-0 hTccvd">SE-111 53 Stockholm</span><br><span-->
+<!--            class="Type__TypeElement-goli3j-0 hTccvd">Sweden</span><br><span-->
+<!--            class="Type__TypeElement-goli3j-0 hTccvd">Reg no: 556703-7485</span><br>office@spotify.com-->
+<!--    </address>-->
+<!--    <h2 class="Type__TypeElement-goli3j-0 hqzNBe">Spotify around the world</h2>-->
+<!--    <div class="WhereSpotify__FlexWrapper-sc-myca1w-0 dUIzIs">-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Belgium</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Square de Meeus 37</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">4th floor</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">1000 Brussels</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Belgium</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify GmbH</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Unter den Linden 10</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">10117 Berlin</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Germany</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Canada Inc.</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">220 Adelaide Street West</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">M5H 1W7 Toronto Ontario</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Canada</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Denmark ApS</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Vestergade 27, 1 th</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">1456 København K</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Denmark</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">SPOTIFY SPAIN SL</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Paseo de Recoletos, 7-9</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">28004 Madrid</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Spain</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Finland Oy</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Merimiehenkatu 36 D</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">FI-00150 Helsinki</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Finland</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify France SAS</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">48 Rue la Bruyère</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">75009</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Paris</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">France</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify India LLP</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Regus, North F/A-4,</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Floor 1st,A Block,</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Shivsagar Estate, Dr Annie Besant Road,</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Worli, Mumbai Mumbai City,</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">MH 400018 INDIA</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Italy S.r.l.</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Via Joe Colombo 4</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">20124 Milano</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Italy</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Netherlands</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Singel 540 3h</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">1017AZ, Amsterdam</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Netherlands</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Ltd</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Adelphi Building</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">4 Savoy Place</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">London WC2N 6AT</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">United Kingdom</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify USA Inc</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">4 World Trade Center</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">150 Greenwich Street, 62nd Floor</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">New York, NY 10007</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">USA</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Mexico</strong><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Pedregal 24 Torre Virreyes Piso 8</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Col. Molino del Rey</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">DF 11040</span><br><span-->
+<!--                class="Type__TypeElement-goli3j-0 hTccvd">Mexico</span><br>office@spotify.com-->
+<!--        </address>-->
+<!--        <address class="Address__AddressContainer-sc-wks62-0 iTycIF"><strong-->
+<!--                class="Type__TypeElement-goli3j-0 dnxIgx">Spotify Israel</strong><br>office@spotify.com-->
+<!--        </address>-->
+<!--    </div>-->
+<!--</section>-->
+<!--</div>-->
+{% load static %}
+
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - codingnepalweb.com -->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <title> An About Us Page | CoderGirl </title>
+  <!---Custom Css File!--->
+  <link rel="stylesheet" href="{% static "css/about_us.css" %}">
+</head>
+<body>
+{% load static %}
+
+
+
+  <section class="about-us">
+
+
+    <div class="about">
+
+         <div class="text">
+
+             <h2>Aboout us</h2>
+          <p>With Spotify, it’s easy to find the right music or podcast for every moment – on your phone, your computer, your tablet and more.
+There are millions of tracks and episodes on Spotify. So whether you’re behind the wheel, working out, partying or relaxing, the right music or podcast is always at your fingertips. Choose what you want to listen to, or let Spotify surprise you.
+</p>
+
 </div>
+ <div class="text">
+
+        <h1>Spotify HQ</h1>
+
+
+             <p>With Spotify, it’s easy to find the right music<br>
+              or podcast for every moment – on your phone,<br>
+              your computer, your tablet and more.<br>
+There are millions of tracks and episodes on Spotify.<br>
+              So whether you’re behind the wheel, working<br>
+              out, partying or relaxing, the right music or <br>
+              podcast is always at your fingertips. Choose what<br>
+
+</p>
+        <div class="data">
+        <a href="{% url "home:home" %}" class="hire">Home</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
 
 
