--- a/static/css/login.css
+++ b/static/css/login.css
@@ -54,13 +54,14 @@ body {
 }
 
 .label {
+  color: white
   display: inline-block;
   margin-bottom: 5px;
   font-weight: 700;
 }
 
 input {
-    font-family: inherit;
+  font-family: inherit;
   display: block;
   font-size: 16px;
   line-height: 1;
