--- a/templates/users/site_base.html
+++ b/templates/users/site_base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="{% static "css/base.css" %}">
+<link rel="stylesheet" href="{% static "css/artist.css" %}">
   <link rel="stylesheet" href="{% static "css/home.css" %}">
 <div class="sidebar">
     <div class="logo">
