--- a/static/css/home.css
+++ b/static/css/home.css
@@ -320,3 +320,44 @@ ul{
   color: #24262b;
   background-color: #ffffff;
 }
+
+
+.search-box{
+    margin-left:18%;
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+  }
+
+  btn-search{
+    width: 50px;
+    height: 50px;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0px;
+    color:#070606 ;
+    background-color:transparent;
+    pointer-events: painted;
+  }
+
+    .btn-search:focus ~ .input-search{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  }
+
+
+  .btn-search:focus ~ .input-search{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  }
