--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -1,96 +1,9 @@
+{% extends "base.html" %}
+
 {% load static %}
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="{% static "css/artist.css" %}">
-<div class="sidebar">
-    <div class="logo">
-        <a href="#">
-            <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Green.png"
-                alt="Logo" />
-        </a>
-    </div>
-
-    <div class="navigation">
-        <ul>
-            <li>
-                <a href="#">
-                    <span class="fa fa-home"></span>
-                    <span>Home</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#">
-                    <span class="fa fa-search"></span>
-                    <span>Search</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#">
-                    <span class="fa fas fa-book"></span>
-                    <span>Your Library</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-
-    <div class="navigation">
-        <ul>
-            <li>
-                <a href="#">
-                    <span class="fa fas fa-plus-square"></span>
-                    <span>Create Playlist</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#">
-                    <span class="fa fas fa-heart"></span>
-                    <span>Liked Songs</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-
-    <div class="policies">
-        <ul>
-            <li>
-                <a href="#">Cookies</a>
-            </li>
-            <li>
-                <a href="#">Privacy</a>
-            </li>
-        </ul>
-    </div>
-</div>
-
-<div class="topbar">
-    <div class="search-box">
-        <button class="btn-search"><i class="fas fa-search"></i></button>
-        <input type="text" class="input-search" placeholder="Type to Search...">
-      </div>
-
-    <div class="navbar">
-        <ul>
-            <li>
-                <a href="#">Premium</a>
-            </li>
-            <li>
-                <a href="#">Support</a>
-            </li>
-            <li>
-                <a href="#">Download</a>
-            </li>
-            <li class="divider">|</li>
-            <li>
-                <a href="#">Sign Up</a>
-            </li>
-        </ul>
-        <button type="button">Log In</button>
-    </div>
-</div>
-
+{% block content %}
 
     <div class="content__middle">
 
@@ -595,5 +508,5 @@
 
     </div>
 
-
+{% endblock %}
 
