--- a/templates/users/registration.html
+++ b/templates/users/registration.html
@@ -12,18 +12,6 @@
     <link rel="stylesheet" href="{% static "css/login.css" %}">
     <title>Youttify</title>
 </head>
-<script>
-    function checkPassword(form) {
-        const confirm_password = document.getElementById("cpwd");
-        var password = document.getElementById("pwd").value;
-        console.log(password)
-        if (password != confirm_password.value) {
-            confirm_password.setCustomValidity("Password did not match");
-        } else {
-            confirm_password.setCustomValidity("");
-        }
-    }
-</script>
 
 <body>
 
@@ -35,7 +23,7 @@
         </div>
 
     <div class="signup_body">
-        <form class="login_form" method='POST' enctype="multipart/form-data">
+        <form class="login_form" method='POST' action="{% url 'user:registration' %}"enctype="multipart/form-data">
             {% csrf_token %}
 
             <span class='label signup-title center-align'>Sign up for free to start listening.</span>
@@ -45,9 +33,8 @@
 
 
             <label for="sign-up-email" class="label">
-                What's your email?{% if email %}
-                <span style="color:#f79862;">Email already exists</span>
-            {% endif %}
+                What's your email?
+
             </label>
 
             <input type="email" class="form_input" name="email" placeholder="Enter your email." required>
