Liked music testing

--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -60,7 +60,7 @@
                 </li>
 
                 <li>
-                    <a href="{% url "home:liked_songs" %}">
+                    <a href="{% url "music:liked_songs" %}">
                         <span class="fa fas fa-heart"></span>
                         <span>Liked Songs</span>
                     </a>
