--- a/templates/music/likedsong.html
+++ b/templates/music/likedsong.html
@@ -1,4 +1,4 @@
-{% extends 'home/liked_songs.html' %}
+{% extends "music/liked_songs.html" %}
 {% load static %}
 
 {% block css %}
@@ -58,22 +58,22 @@ active
 
 
     <div class="playlist__songlist">
-    {% for song in user_playlist %}
+    {% for song in musics %}
     <form action="" method="get">
-        <div class="playlist__song playlist__row" onclick='playSong("{{ song.song_youtube_id }}","false","true")'>
+        <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
         <div class="playlist__headerTitle">
-          <img class="playlist__albumimg" src="{{song.song_albumsrc}}" alt =''/>
+          <img class="playlist__albumimg" src="{{song.image.url}}" alt =''/>
 
           <div class="playlist__songTitle ellipsis_one_line">
-          {{song.song_title}}
+          {{song.name}}
           </div>
-          <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.song_title}}</textarea>
+          <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea>
 
           </div>
         <div class="playlist__headerAlbum ellipsis_one_line">{{song.song_channel}}</div>
-        <div class="playlist__headerDate">{{song.song_date_added}}</div>
+        <div class="playlist__headerDate">{{song.year}}</div>
         <div class="playlist__headerDuration">
-        {{song.song_dur}}
+        {{song.duration}}
         <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""</button>
         </div>
     </div>
