--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 <link rel="stylesheet" href="{% static "css/base.css" %}">
   <link rel="stylesheet" href="{% static "css/home.css" %}">
 <div class="sidebar">
@@ -125,7 +125,7 @@
              <h4>online shop</h4>
              <ul>
                <li><a href="#">watch</a></li>
-               <li><a href="{% url "artist:artist_detail" %}">bag</a></li>
+               <li><a href="">bag</a></li>
                <li><a href="#">shoes</a></li>
                <li><a href="#">dress</a></li>
              </ul>
