--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,38 +4,26 @@
 {% block content %}
 
 
+<div class="spotify-playlists">
 
- <div class="spotify-playlists">
-            <h2>Focus</h2>
-            <div class="list">
-   {%for music in musics %}
-<div class="item">
-                   <a href="{% url "music:detail" music.pk %}" ><img src={{ music.image.url }}/></a>
-
-                    <div class="play">
-                        <span class="fa fa-play"></span>
-                    </div>
-                    <h4>{{ music.name }}</h4>
-                    <p>{{music.description}}</p>
-                </div>
-{% endfor %}
-
-            </div>
-        </div>
-
-        <div class="spotify-playlists">
-            <h2>Mood</h2>
-            <div class="list">
+    {% for album_chunk in chunked_albums %}
+     <h2>Albums</h2>
+        <div class="list">
+            {% for album in album_chunk %}
                 <div class="item">
-                    <img src="https://th.bing.com/th/id/OIP.aimXr7-V7TOcy9yHReqUBAHaE5?rs=1&pid=ImgDetMain
-                    " />
+                    <a href="{% url 'music:album_detail' album.pk %}">
+                        <img src="{{ album.image.url }}" />
+                    </a>
                     <div class="play">
                         <span class="fa fa-play"></span>
                     </div>
-                    <h4>Mood Booster</h4>
-                    <p>Get happy with today's dose of feel-good...</p>
+                    <h4>{{ album.name }}</h4>
+                    <p>{{ album.description }}</p>
                 </div>
-
+            {% endfor %}
+        </div>
+    {% endfor %}
+</div>
 
             </div>
 
