--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -154,7 +154,7 @@
              <h4>online shop</h4>
              <ul>
                <li><a href="#">watch</a></li>
-               <li><a href="{% url "artist:artist_detail" %}">bag</a></li>
+               <li><a href="">bag</a></li>
                <li><a href="#">shoes</a></li>
                <li><a href="#">dress</a></li>
              </ul>
